--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Francesco Campagna</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <meta name="author" content="Francesco Campagna" />
   <link rel="stylesheet" media="screen" href="style.css">
 </head>
