aggiornato menu a tendina

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
   <header class="header">
-    <div class="header__content">
+    <div class="container">
       <ul class="header__menu">
         <li><a href="#home" class="underline">Home</a></li>
         <li><a href="#about">About Me</a></li>
@@ -68,11 +68,13 @@
             </div>
         </div>
         <div class="about__right">
-            <div class="about__right__item">
-                <p class="large-text">5</p>
-                <p class="small-text">Projects <br> Completed</p>
-                <p class="super-small-text">(See the Portfolio)</p>
-            </div>
+            <a href="#portfolio">
+                <div class="about__right__item">
+                    <p class="large-text">5</p>
+                    <p class="small-text">Projects <br> Completed</p>
+                    <p class="super-small-text">(See the Portfolio)</p>
+                </div>
+            </a>
             <div class="about__right__item">
                 <p class="large-text">110/110</p>
                 <p class="small-text">Master<br> Degree</p>
@@ -219,10 +221,12 @@
         <div class="portfolio mb-200">
             <div class="portfolio__column">
                 <div class="port_item_small">
-                    <img src="img/fpga.png">
-                    <div class="overlay">
-                        <h1 class="med-text">CPU Design</h1>
-                    </div>
+                    <a href="https://github.com/FrancescoCampagna/MIPS-32bit" target="_blank" rel="noopener noreferrer">
+                        <img src="img/fpga.png">
+                        <div class="overlay">
+                            <h1 class="med-text">CPU Design</h1>
+                        </div>
+                    </a>
                 </div>
                 <div class="port_item_small">
                     <img src="img/VRP.jpg">
